--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "bootstrap": "^5.2.0",
     "bootstrap-icons": "^1.9.1",
     "lodash": "^4.17.21",
-    "vue": "^3.2.37",
-    "vue-router": "^4.1.2"
+    "vue": "^3.2.37"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.0.0",
